--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -375,7 +375,7 @@
                                 <div class="grid-list-options">
                                     <ul class="view-mode">
                                         <li class="active"><a href="#product-grid" data-view="product-grid"><i class="ti-layout-grid2"></i></a></li>
-                                        <li><a href="#product-list" data-view="product-list"><i class="ti-view-list"></i></a></li>
+                                        <li ><a href="#product-list" data-view="product-list"><i class="ti-view-list"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product-sorting">
@@ -398,13 +398,13 @@
                                 </div>
                             </div>
                             <div class="grid-list-product-wrapper tab-content">
-                                <div id="new-product" class="product-grid product-view tab-pane active"
-                                     th:each="product : ${homeViewModel.getProductViewModels()}">
-                                    <div class="row">
+                                <div id="new-product" class="product-grid product-view tab-pane active">
+                                    <div th:each="product : ${homeViewModel.getProductViewModels()}"
+                                            class="row">
                                         <div class="product-width col-md-6 col-xl-4 col-lg-6">
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
-                                                    <a th:href="${'/product/'+product.getId()}">
+                                                    <a th:href="${'/product/' + product.getId()}">
                                                         <img th:src="${product.getThumbnail()}"
                                                              style="height:272px"
                                                              alt="This is a car">
@@ -444,7 +444,149 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="product-list-details">
+                                                <div class="product-list-details active">
+                                                    <h2><a th:href="${'/product/'+product.getId()}"
+                                                           th:text="${product.getName()}">Gloriori GSX 250 R</a></h2>
+                                                    <div style="display: none" class="quick-view-rating">
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                    </div>
+                                                    <div class="product-price">
+                                                        <span th:text="${'$' + product.getPrice()}">$2549</span>
+                                                    </div>
+                                                    <p th:text="${'$' + product.getDescription()}">Lorem ipsum dolor sit amet, consectetur adipic it, sed do
+                                                        eiusmod tempor incididunt ut labore et dolore mag aliqua.
+                                                        Ut enim ad minim veniam, quis nostrud exercitation
+                                                        ullamco laboris nisi ut aliquip ex ea commodo it.
+                                                        Duis aute irure dolor in reprehenderit in voluptate
+                                                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                                    <div class="shop-list-cart">
+                                                        <a class="add-to-cart"
+                                                           title="Add To Cart"
+                                                           th:attr="prodid=${product.getId()}"
+                                                           style="cursor: pointer"><i class="ti-shopping-cart"></i> Add to cart</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="product-width col-md-6 col-xl-4 col-lg-6">
+                                            <div class="product-wrapper mb-35">
+                                                <div class="product-img">
+                                                    <a th:href="${'/product/' + product.getId()}">
+                                                        <img th:src="${product.getThumbnail()}"
+                                                             style="height:272px"
+                                                             alt="This is a car">
+                                                    </a>
+                                                    <div class="product-item-dec">
+                                                        <ul>
+                                                            <li>2018</li>
+                                                            <li>MANUAL</li>
+                                                            <li>PETROL</li>
+                                                            <li>270 CC</li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="product-action">
+                                                        <a class="action-plus-2 p-action-none add-to-cart"
+                                                           title="Add To Cart"
+                                                           th:attr="prodid=${product.getId()}"
+                                                           style="cursor: pointer"
+                                                        >
+                                                            <i class=" ti-shopping-cart"></i>
+                                                        </a>
+                                                        <a style="display: none" class="action-cart-2" title="Wishlist" href="#">
+                                                            <i class=" ti-heart"></i>
+                                                        </a>
+                                                        <a class="action-reload" title="Quick View" data-toggle="modal" data-target="#exampleModal" href="#">
+                                                            <i class=" ti-zoom-in"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div class="product-content-wrapper">
+                                                        <div class="product-title-spreed">
+                                                            <h4><a
+                                                                    th:href="${'/product/'+product.getId()}"
+                                                                    th:text="${product.getName()}">Gloriori GSX 250 R</a></h4>
+                                                            <span>6600 RPM</span>
+                                                        </div>
+                                                        <div class="product-price">
+                                                            <span th:text="${'$' + product.getPrice()}">$2549</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="product-list-details active">
+                                                    <h2><a th:href="${'/product/'+product.getId()}"
+                                                           th:text="${product.getName()}">Gloriori GSX 250 R</a></h2>
+                                                    <div style="display: none" class="quick-view-rating">
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                        <i class="fa fa-star reting-color"></i>
+                                                    </div>
+                                                    <div class="product-price">
+                                                        <span th:text="${'$' + product.getPrice()}">$2549</span>
+                                                    </div>
+                                                    <p th:text="${'$' + product.getDescription()}">Lorem ipsum dolor sit amet, consectetur adipic it, sed do
+                                                        eiusmod tempor incididunt ut labore et dolore mag aliqua.
+                                                        Ut enim ad minim veniam, quis nostrud exercitation
+                                                        ullamco laboris nisi ut aliquip ex ea commodo it.
+                                                        Duis aute irure dolor in reprehenderit in voluptate
+                                                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                                    <div class="shop-list-cart">
+                                                        <a class="add-to-cart"
+                                                           title="Add To Cart"
+                                                           th:attr="prodid=${product.getId()}"
+                                                           style="cursor: pointer"><i class="ti-shopping-cart"></i> Add to cart</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="product-width col-md-6 col-xl-4 col-lg-6">
+                                            <div class="product-wrapper mb-35">
+                                                <div class="product-img">
+                                                    <a th:href="${'/product/' + product.getId()}">
+                                                        <img th:src="${product.getThumbnail()}"
+                                                             style="height:272px"
+                                                             alt="This is a car">
+                                                    </a>
+                                                    <div class="product-item-dec">
+                                                        <ul>
+                                                            <li>2018</li>
+                                                            <li>MANUAL</li>
+                                                            <li>PETROL</li>
+                                                            <li>270 CC</li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="product-action">
+                                                        <a class="action-plus-2 p-action-none add-to-cart"
+                                                           title="Add To Cart"
+                                                           th:attr="prodid=${product.getId()}"
+                                                           style="cursor: pointer"
+                                                        >
+                                                            <i class=" ti-shopping-cart"></i>
+                                                        </a>
+                                                        <a style="display: none" class="action-cart-2" title="Wishlist" href="#">
+                                                            <i class=" ti-heart"></i>
+                                                        </a>
+                                                        <a class="action-reload" title="Quick View" data-toggle="modal" data-target="#exampleModal" href="#">
+                                                            <i class=" ti-zoom-in"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div class="product-content-wrapper">
+                                                        <div class="product-title-spreed">
+                                                            <h4><a
+                                                                    th:href="${'/product/'+product.getId()}"
+                                                                    th:text="${product.getName()}">Gloriori GSX 250 R</a></h4>
+                                                            <span>6600 RPM</span>
+                                                        </div>
+                                                        <div class="product-price">
+                                                            <span th:text="${'$' + product.getPrice()}">$2549</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="product-list-details active">
                                                     <h2><a th:href="${'/product/'+product.getId()}"
                                                            th:text="${product.getName()}">Gloriori GSX 250 R</a></h2>
                                                     <div style="display: none" class="quick-view-rating">
@@ -543,7 +685,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="product-width col-md-6 col-xl-4 col-lg-6">
+                                        <div style="display: none" class="product-width col-md-6 col-xl-4 col-lg-6">
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a th:href="${'/product/'+product.getId()}">
